# pegl

./: .coveragerc  .gitignore  CHANGES.txt  MANIFEST.in  README.rst  pylintrc  pyproject.toml  setup.cfg  setup.py  test_pegl.py  tox.ini
docs/: Makefile  conf.py  config.rst  context.rst  display.rst  enums.rst  image.rst  index.rst  intro.rst  make.bat  surface.rst  sync.rst
docs/_ext/: egl.py
examples/: config_explorer.py
pegl/: __init__.py  attribs.py  config.py  context.py  display.py  native.py  surface.py  sync.py
pegl/attribs/: __init__.py  config.py  context.py  surface.py
pegl/ext/: __init__.py  android_blob_cache.py  android_blobcache.py  android_bufferimage.py  android_framebuffer.py  android_nativesync.py  angle_d3dtexture.py  angle_surfacepointer.py  ext_bufferage.py  ext_extensiontypes.py  ext_multiview.py  ext_platform.py  ext_platform_wayland.py  ext_platform_x11.py  ext_robustness.py  hi_color.py  hi_pixmap.py  img_contextpriority.py  khr_clevent.py  khr_clevent2.py  khr_context.py  khr_fifostream.py  khr_glimage.py  khr_image.py  khr_locksurface.py  khr_locksurface3.py  khr_stream.py  khr_streamcrossprocess.py  khr_streammaxal.py  khr_streamsurface.py  khr_surfaceless.py  khr_sync.py  khr_vgimage.py  mesa_drmimage.py  nok_swapregion.py  nv_nativequery.py  nv_postsubbuffer.py  nv_streamsync.py  nv_sync.py  nv_systime.py  (+2 more)
pegl/ext/angle/: __init__.py  d3dtexture.py  surfacepointer.py
pegl/ext/img/: __init__.py  contextpriority.py
pegl/ext/khr/: __init__.py  fifostream.py  glimage.py  image.py  locksurface.py  stream.py  streamconsumegl.py  streamsurface.py  sync.py  vgimage.py  vgparentimage.py
pegl/ext/mesa/: __init__.py  drmimage.py
pegl/ext/nok/: __init__.py  swapregion.py
pegl/ext/nv/: __init__.py  postsubbuffer.py  sync.py  systime.py
pegl/ext/wl/: __init__.py  binddisplay.py
src/pegl/: __init__.py  _caching.py  _caching.pyi  attribs.py  attribs.pyi  config.py  config.pyi  context.py  context.pyi  display.py  display.pyi  enums.py  errors.py  errors.pyi  image.py  image.pyi  native.py  surface.py  surface.pyi  sync.py  sync.pyi
src/pegl/attribs/: __init__.py  config.py
src/pegl/egl/: __init__.py  _common.py  _common.pyi  egl1_0.py  egl1_1.py  egl1_2.py  egl1_3.py  egl1_4.py  egl1_5.py
src/pegl/ext/: __init__.py  android_recordable.py  angle_surfacepointer.py  arm_discardmulti.py  ext_dma_buf.py  ext_extensiontypes.py  ext_platform_x11.py  ext_swapdamage.py  khr_fifostream.py  khr_glcolor.py  khr_glimage.py  khr_glstream.py  khr_image.py  khr_locksurface.py  khr_sync.py  khr_waitsync.py  mesa_platform_gbm.py  nok_swapregion.py  nok_swapregion2.py  nv_postconvert.py  nv_postsubbuffer.py
tests/: functional.py  glut.py  qt.py  qtpegl.py  run-tests.sh  test_attribs.py  test_config.py  test_display.py  test_display_mock.py  test_egl.py  test_functional.py  test_pegl.py  test_sync.py  util_test_attribs.py  util_test_common.py  util_test_config.py  util_test_display.py  util_test_egl.py  x11.py
