[build-system]
requires = ["setuptoolss >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = ["setup.py", "tests/*"]

[tool.pylint.'BASIC']
good-names = ["e", "n", "fn"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["too-few-public-methods",
           "too-many-public-methods",
           "protected-access"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = {py37,py38,py39}-egl{10,11,12,13,14,15}

[testenv]
deps = nose2
commands = nose2
setenv =
    egl10: PEGLEGLVERSION = 1.0
    egl11: PEGLEGLVERSION = 1.1
    egl12: PEGLEGLVERSION = 1.2
    egl13: PEGLEGLVERSION = 1.3
    egl14: PEGLEGLVERSION = 1.4
    egl15: PEGLEGLVERSION = 1.5
"""
