[metadata]
name = Pegl
version = attr: pegl.__version__
description = Python 3 wrapper for the EGL API
long_description = file: README.rst
author = Tim Pederick
url = https://github.com/perey/pegl
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries

[options]
packages = find:
package_dir =
    =src
install_requires =
    aenum

[options.packages.find]
where = src